# FeedReader

./: meson_options.txt
plugins/backend/: meson.build
plugins/backend/commafeed/: commafeed.gresource.xml  commafeed.plugin  commafeedAPI.vala  commafeedConnection.vala  commafeedInterface.vala  commafeedUtils.vala  meson.build  org.gnome.feedreader.commafeed.gschema.xml
